# optimization-methods-labs

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  build.sh
cmake/: .dirinfo  appBuilder.cmake  helperBuilder.cmake  linkGLibC.cmake  packaging.cmake
doc/: .gitignore
doc/1/: brentRange.csv  dichotomyRange.csv  epsilonToComplexity.csv  epsilonToIterations.csv  epsilonToIterations.tsv  fibonacciRange.csv  golden-sectionRange.csv  golden_sectionRange.csv  main.tex  parabolicRange.csv  ratios.csv
doc/2/: build.sh  main.tex  project.dot
doc/3/: main.tex
doc/4/: main.tex  project.dot
include/opt-methods/approximators/: .dirinfo  Brent.hpp  Dichotomy.hpp  Fibonacci.hpp  GoldenSection.hpp  Parabolic.hpp  all.hpp
include/opt-methods/coroutines/: .dirinfo  Generator.hpp
include/opt-methods/marquardt/: Marquardt1.hpp  Marquardt2.hpp  all.hpp
include/opt-methods/math/: .dirinfo  BisquareFunction.hpp  CountedFloat.hpp  DenseMatrix.hpp  DiagonalMatrix.hpp  LU.hpp  Matrix.hpp  PointRegion.hpp  ProfileMatrix.hpp  RowColumnSymMatrix.hpp  Scalar.hpp  ShiftedView.hpp  SkylineMatrix.hpp  Vector.hpp  def.hpp
include/opt-methods/multidim/: .dirinfo  ConjugateGradientDescent.hpp  GradientDescent.hpp  SteepestDescent.hpp  all.hpp
include/opt-methods/newton/: Newton.hpp  NewtonBase.hpp  NewtonDirection.hpp  NewtonOnedim.hpp  all.hpp
include/opt-methods/quasi-newton/: BFS.hpp  Powell.hpp  QuasiNewtonBase.hpp  all.hpp
include/opt-methods/solvers/: .dirinfo  Approximator.hpp  BaseApproximator.hpp  BaseApproximatorDraw.hpp  Erased.hpp  ErasedApproximator.hpp  IterationalSolver.hpp  Solver.hpp
include/opt-methods/solvers/function/: .dirinfo  ErasedFunction.hpp  function-helper.hpp
include/opt-methods/util/: .dirinfo  ChartItem.hpp  Charting.hpp  ScopeGuards.hpp  Util.hpp
misc/: tree.rb  whatprovides.sh
res/: res.qrc
src/: .dirinfo  CMakeLists.txt
src/app1/: CMakeLists.txt  NavigableChartView.cpp  NavigableChartView.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/app2/: CMakeLists.txt  NavigableChartView.cpp  NavigableChartView.h  Trajectory.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  recalc.cpp  screenshot.cpp
src/app2/res/: res.qrc
src/helper1-eps2complexity/: CMakeLists.txt  main.cpp
src/helper1-ranges/: CMakeLists.txt  main.cpp
src/helper2-multidim/: CMakeLists.txt  main.cpp
src/helper3-stats/: CMakeLists.txt  main.cpp
src/helper3-test/: CMakeLists.txt  main.cpp
src/helper4-stats/: CMakeLists.txt  main.cpp
src/lib/: .dirinfo  CMakeLists.txt  ChartItem.cpp  Charting.cpp
